<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.kia.kcvg.MainActivity">
    <RelativeLayout
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_main"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/service_name"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/top_sub_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/top_toolbar">
        <LinearLayout
            android:id="@+id/submenu_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="264dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/menu_1"
                android:textSize="17sp"
                android:textColor="@android:color/white"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/menuVerticalLineBg"/>
            <TextView
                android:layout_width="264dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/menu_2"
                android:textSize="17sp"
                android:textColor="@android:color/white"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/menuVerticalLineBg"/>
            <TextView
                android:layout_width="264dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/menu_3"
                android:textSize="17sp"
                android:textColor="@android:color/white"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/menuVerticalLineBg"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/submenu_area"
            android:background="@color/colorAccent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_search_36pt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_account_circle_36pt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_g_translate_36pt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/all_right_reserved"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_sub_toolbar"
        android:layout_above="@id/footer"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/pw"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:text="@string/message_login"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:hint="@string/id"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="text"
                android:textColorHint="@color/hint"
                android:maxLines="1"
                android:background="@drawable/login_border_edittext_bg"/>
            <EditText
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/password"
                android:textColorHint="@color/hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/login_border_edittext_bg"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/login_capital"
                android:textSize="17sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
