<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kia.kcvg.MainActivity">
    <RelativeLayout
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_sub"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/service_name"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/top_sub_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/top_toolbar">
        <LinearLayout
            android:id="@+id/submenu_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="264dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/menu_1"
                android:textSize="17sp"
                android:textColor="@android:color/white"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/menuVerticalLineBg"/>
            <TextView
                android:layout_width="264dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/menu_2"
                android:textSize="17sp"
                android:textColor="@android:color/white"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/menuVerticalLineBg"/>
            <TextView
                android:layout_width="264dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/menu_3"
                android:textSize="17sp"
                android:textColor="@android:color/white"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/menuVerticalLineBg"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/submenu_area"
            android:background="@color/colorAccent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_search_36pt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_account_circle_36pt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"/>
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_account_circle_36pt"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/all_right_reserved"/>
    </RelativeLayout>
    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/top_sub_toolbar"/>
</RelativeLayout>
